menifest/pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: axion-app
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
          
---

apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: axion-app
spec:
 
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pgadmin
