menifest/postgresdb.yml
# PostgreSQL PVC #

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-pvc
  namespace: axion-app
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
  storageClassName: managed-csi


#### Postgres Deployment yaml#####

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: axion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432


      volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc



---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: axion-app
spec:
  selector:
    app: postgres
  ports:
      port: 5432
      targetPort: 5432
  type: ClusterIP
